examples/kubernetes/reverse-proxy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: containous/whoami
---
apiVersion: v1
kind: Service
metadata:
  name: app3
  # this label is mandatory
  labels:
    bunkerized-nginx: "yes"
  annotations:
    bunkerized-nginx.SERVER_NAME: "app3.example.com"
    bunkerized-nginx.USE_REVERSE_PROXY: "yes"
    bunkerized-nginx.REVERSE_PROXY_URL: "/"
    bunkerized-nginx.REVERSE_PROXY_HOST: "http://app3"
    bunkerized-nginx.AUTO_LETS_ENCRYPT: "yes"
spec:
  type: ClusterIP
  selector:
    app: app3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
